USD doesn't import animation #110076

Closed
opened 2023-07-13 20:44:20 +02:00 by STman3D · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX 2060 mobile

Blender Version
Broken: 3.6
Worked: #

Short description of error
No animation when importing skeleton animated USD.
Although if you watch this video, everything worked fine https://youtu.be/dGU7ot25P9M?t=224
Tried different versions Blender 3.0, 3.4, 4.0 - animation does not appear anywhere.

Based on documentation https://docs.blender.org/manual/en/latest/files/import_export/usd.html#animations
guess should be created Transform Cache, but it doesn't happen.

Exact steps for others to reproduce the error

  1. Download https://developer.apple.com/augmented-reality/quick-look/models/drummertoy/toy_drummer_idle.usdz
  2. Blender > File > Import > Universal Scene Description (usd*)
  3. Play Animation
**System Information** Operating system: Windows 10 Graphics card: GTX 2060 mobile **Blender Version** Broken: 3.6 Worked: # **Short description of error** No animation when importing skeleton animated USD. Although if you watch this video, everything worked fine https://youtu.be/dGU7ot25P9M?t=224 Tried different versions Blender 3.0, 3.4, 4.0 - animation does not appear anywhere. Based on documentation https://docs.blender.org/manual/en/latest/files/import_export/usd.html#animations guess should be created Transform Cache, but it doesn't happen. **Exact steps for others to reproduce the error** 1. Download https://developer.apple.com/augmented-reality/quick-look/models/drummertoy/toy_drummer_idle.usdz 2. Blender > File > Import > Universal Scene Description (usd*) 3. Play Animation
STman3D added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-13 20:44:20 +02:00
YimingWu changed title from USD import animation skeleton to USD doesn't import animation 2023-07-17 06:13:46 +02:00
Member

For me this file imported into blender without animation, neither transform cache or mesh sequence is present. Not sure if it's the file's problem.

@makowalski Could you take a look?

For me this file imported into blender without animation, neither transform cache or mesh sequence is present. Not sure if it's the file's problem. @makowalski Could you take a look?

This USD has skeletal animation, which isn't currently supported in the USD importer. UsdSkel IO is implemented in the universal-scene-description branch and I confirmed the animation loads in that branch. I'm currently working on porting the UsdSkel conversion code to the main branch and this feature will hopefully be available for Blender 4.0. I will update this thread with more information once I've created the UsdSkel import pull request.

This USD has skeletal animation, which isn't currently supported in the USD importer. `UsdSkel` IO is implemented in the `universal-scene-description` branch and I confirmed the animation loads in that branch. I'm currently working on porting the `UsdSkel` conversion code to the `main` branch and this feature will hopefully be available for Blender 4.0. I will update this thread with more information once I've created the `UsdSkel` import pull request.
Author

As I understand it, the USD format itself has changed? It used to work before, I corrected the topic and added video timing to YouTube

As I understand it, the USD format itself has changed? It used to work before, I corrected the topic and added video timing to YouTube

Yes, that's correct, the animation format for that toy drummer USDZ asset has changed relatively recently. The older version toy_drummer.usdz had animating transforms that could be imported with the Transform Cache. The newer toy_drummer_idle.usdz has a skeletal animation, which requires importing armatures, skinning and animation curves. This will be handled in the UsdSkel import pull request I'm working on.

Yes, that's correct, the animation format for that toy drummer USDZ asset has changed relatively recently. The older version `toy_drummer.usdz` had animating transforms that could be imported with the `Transform Cache`. The newer `toy_drummer_idle.usdz` has a skeletal animation, which requires importing armatures, skinning and animation curves. This will be handled in the `UsdSkel` import pull request I'm working on.
Michael Kowalski added the
Interest
USD
label 2023-07-18 16:09:17 +02:00
Michael Kowalski added this to the USD project 2023-07-18 16:09:25 +02:00

This issue should now be addressed with commit 6f4cb9bc56

This issue should now be addressed with commit https://projects.blender.org/blender/blender/commit/6f4cb9bc56e43343ab2a58eade516e5c7dbc77a3
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-17 20:32:19 +02:00
Bastien Montagne removed this from the USD project 2023-08-25 23:53:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110076
No description provided.