source/blender/io/usd/intern/usd_reader_stage.h
@@ -45,6 +45,13 @@ class USDStageReader {
 
   void collect_readers(struct Main *bmain);
 
+  /**
+   * Complete setting up the armature modifiers that
+   * were created for skinned meshes by setting the
+   * modifier object on the corresponding modifier.
+   */
+  void process_armature_modifiers() const;
+
   /* Convert every material prim on the stage to a Blender
    * material, including materials not used by any geometry.
    * Note that collect_readers() must be called before calling
